<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    tools:context=".AddNewNotes">

    <EditText
        android:id="@+id/notes_enter_title"
        android:inputType="text"
        android:hint="@string/enter_notes_title"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/notes_enter_description"
        android:inputType="textMultiLine"
        android:hint="@string/enter_notes_description"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="400dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/notes_enter_save"
            android:text="@string/save"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>



</LinearLayout>